Update Nav Link Active

--- a/index.html
+++ b/index.html
@@ -187,11 +187,15 @@
             <p>Created with <i class="bi bi-suit-heart-fill text-danger"></i> by <a href="https://instagram.com/zeinasavara" class="text-white fw-bold">Zein Aulia Savara</a></p>
         </footer>
         <!-- End Footer -->
-
+    
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-        <script>
-            $(function() {
-                $('#nav a[href~="' + location.href + '"]').parents('li').addClass('active');
+        <script type="text/javascript">
+            $(document).ready(function(){
+                  $('ul li a').click(function(){
+                    $('li a').removeClass("active");
+                    $(this).addClass("active");
+                });
             });
         </script>
     </body>
