Update Scrollspy by Bootstrap

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
     <body id="home">
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow fixed-top" id="navbar-example2">
             <div class="container">
                 <a class="navbar-brand" href="#">Zein Aulia Savara</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,6 +56,7 @@
             </svg>
         </section>
         <!-- End Jumbotron -->
+        <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" tabindex="0">
         <!-- About -->
         <section id="about">
             <div class="container">
@@ -181,22 +182,14 @@
             </svg>
         </section>
         <!-- End Contact -->
+        </div>
 
         <!-- Footer -->
         <footer class="bg-primary text-white text-center pb-5">
             <p>Created with <i class="bi bi-suit-heart-fill text-danger"></i> by <a href="https://instagram.com/zeinasavara" class="text-white fw-bold">Zein Aulia Savara</a></p>
         </footer>
         <!-- End Footer -->
-    
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-        <script type="text/javascript">
-            $(document).ready(function(){
-                  $('ul li a').click(function(){
-                    $('li a').removeClass("active");
-                    $(this).addClass("active");
-                });
-            });
-        </script>
     </body>
 </html>
