--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
             </svg>
         </section>
         <!-- End Jumbotron -->
-        <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" tabindex="0">
         <!-- About -->
-        <section id="about">
+        <section id="about" data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" tabindex="0">
             <div class="container">
                 <div class="row text-center mb-3">
                     <div class="col">
@@ -85,7 +84,7 @@
         <!-- End About -->
 
         <!-- Projects -->
-        <section id="projects">
+        <section id="projects" data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" tabindex="0">
             <div class="container">
                 <div class="row text-center mb-3">
                     <div class="col">
@@ -146,7 +145,7 @@
         <!-- End Projects -->
 
         <!-- Contact -->
-        <section id="contact">
+        <section id="contact" data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" tabindex="0">
             <div class="container">
                 <div class="row text-center mb-3">
                     <div class="col">
@@ -182,7 +181,6 @@
             </svg>
         </section>
         <!-- End Contact -->
-        </div>
 
         <!-- Footer -->
         <footer class="bg-primary text-white text-center pb-5">
