--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- My CSS -->
         <link rel="stylesheet" href="style.css" />
     </head>
-    <body id="home">
+    <body id="home" data-bs-spy="scroll" data-bs-target="#navbar-example2">
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow fixed-top" id="navbar-example2">
             <div class="container">
@@ -57,7 +57,7 @@
         </section>
         <!-- End Jumbotron -->
         <!-- About -->
-        <section id="about" data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" tabindex="0">
+        <section id="about">
             <div class="container">
                 <div class="row text-center mb-3">
                     <div class="col">
@@ -84,7 +84,7 @@
         <!-- End About -->
 
         <!-- Projects -->
-        <section id="projects" data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" tabindex="0">
+        <section id="projects">
             <div class="container">
                 <div class="row text-center mb-3">
                     <div class="col">
@@ -145,7 +145,7 @@
         <!-- End Projects -->
 
         <!-- Contact -->
-        <section id="contact" data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" tabindex="0">
+        <section id="contact">
             <div class="container">
                 <div class="row text-center mb-3">
                     <div class="col">
